2008-02-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* plugins/elements/gstfdsink.c: (gst_fd_sink_start):
	* plugins/elements/gstfdsrc.c: (gst_fd_src_update_fd):
	Use init macros and functions.

2008-02-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/gst/gstreamer-sections.txt:
	* gst/gstpoll.c: (gst_poll_fd_init):
	* gst/gstpoll.h:
	Add INIT macro and _init method for initializing the GstPollFD.

2008-02-28  Sebastian Dröge  <slomo@circular-chaos.org>

	* plugins/elements/gstfdsink.c: (gst_fd_sink_start),
	(gst_fd_sink_update_fd):
	* plugins/elements/gstfdsrc.c: (gst_fd_src_update_fd):
	* tests/check/gst/gstpoll.c: (test_poll_wait), (GST_START_TEST),
	(delayed_restart), (delayed_control):
	Initialize some uninitialized variables as spotted by valgrind.

2008-02-28  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/benchmarks/Makefile.am:
	* tests/benchmarks/gstpollstress.c: (mess_some_more), (run_test),
	(main):
	Add poll stress test.

2008-02-28  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Peter Kjellerstedt <pkj at axis dot com>

	* plugins/elements/gstfdsink.c: (gst_fd_sink_render),
	(gst_fd_sink_start), (gst_fd_sink_stop), (gst_fd_sink_unlock),
	(gst_fd_sink_unlock_stop), (gst_fd_sink_update_fd):
	* plugins/elements/gstfdsink.h:
	* plugins/elements/gstfdsrc.c: (gst_fd_src_update_fd),
	(gst_fd_src_start), (gst_fd_src_stop), (gst_fd_src_unlock),
	(gst_fd_src_unlock_stop), (gst_fd_src_create),
	(gst_fd_src_uri_set_uri):
	* plugins/elements/gstfdsrc.h:
	Port to GstPoll. See #505417.

2008-02-27  Jan Schmidt  <jan.schmidt@sun.com>

	* win32/common/libgstreamer.def:
	Add new gst_poll_ symbols to win32 defs.

2008-02-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/libs/gstreamer-libs-sections.txt:
	* libs/gst/net/gstnetclientclock.c:
	(gst_net_client_clock_class_init), (gst_net_client_clock_init),
	(gst_net_client_clock_finalize), (gst_net_client_clock_do_select),
	(gst_net_client_clock_thread), (gst_net_client_clock_start),